# k8s-course

./: .gitignore  README
.github/workflows/: delete.yaml  main.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
cron/: Cargo.toml  Dockerfile
cron/manifests/: cronjob.yaml
cron/src/: main.rs
logger/: Cargo.toml  Dockerfile  deployment.yaml
logger/manifests/: deployment.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
logger/src/: main.rs
manifests/: postgresql.yaml
pingpong/: Cargo.toml  Dockerfile
pingpong/manifests/: deployment.yaml  ingress.yaml  service.yaml
pingpong/src/: main.rs
project/: Cargo.toml  Dockerfile  deployment.yaml  kustomization.yaml
project/manifests/: deployment.yaml  secret.enc.yaml  service-backend.yaml  service.yaml
project/src/: main.rs
