[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.6"
tokio = { version = "1.19.2", features = ["full"] }
