[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
actix-web = "4"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["default-tls","json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.6"
tokio = { version = "1.19.2", features = ["full"] }

